--- a/video_processing_service/package.json
+++ b/video_processing_service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y",
+  "name": "video_processing_service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "express": "^4.18.2",
+    "fluent": "^0.13.0",
+    "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.11.20",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
